<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/coordinator_layout">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textEngines"
        android:text="@string/engines_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/name_param"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textEnginesVal"
        android:text="@string/engines_val"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/val_param"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textFuelAmountTons"
        android:text="@string/fuel_amount_tons_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEngines"
        style="@style/name_param"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textFuelAmountTonsVal"
        android:text="@string/fuel_amount_tons_val"
        app:layout_constraintEnd_toStartOf="@+id/textFuelAmountTonsValType"
        app:layout_constraintTop_toBottomOf="@+id/textEnginesVal"
        style="@style/val_param"
        android:layout_marginEnd="4dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textFuelAmountTonsValType"
        android:text="@string/ton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEnginesVal"
        style="@style/val_param_type"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textBurnTimeSec"
        android:text="@string/burn_time_sec_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFuelAmountTons"
        style="@style/name_param"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textBurnTimeSecVal"
        android:text="@string/burn_time_sec_val"
        app:layout_constraintEnd_toStartOf="@+id/textBurnTimeSecValType"
        app:layout_constraintTop_toBottomOf="@+id/textFuelAmountTonsVal"
        style="@style/val_param"
        android:layout_marginEnd="8dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textBurnTimeSecValType"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:text="@string/sec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFuelAmountTonsVal"
        style="@style/val_param_type"/>

</androidx.constraintlayout.widget.ConstraintLayout>