<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textRocketName"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/rocket_name"
        app:layout_constraintBottom_toTopOf="@+id/scrollLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/rocket_name" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@null"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_settings_24"
        tools:ignore="SpeakableTextPresentCheck" />


    <HorizontalScrollView
        android:id="@+id/scrollLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton">

        <include layout="@layout/horizontal_info_layout"
            android:id="@+id/included_horizontal"
            />
    </HorizontalScrollView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollLayout">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textFirstFlight"
                    android:text="@string/first_flight_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/name_param" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textFirstFlightVal"
                    android:text="@string/first_flight_val"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/val_param" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textCountry"
                    android:text="@string/country_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textFirstFlight"
                    style="@style/name_param"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textCountryVal"
                    android:text="@string/country_val"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textFirstFlightVal"
                    style="@style/val_param"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textCostPerLaunch"
                    android:text="@string/cost_per_launch_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textCountry"
                    style="@style/name_param"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textCostPerLaunchVal"
                    android:text="@string/cost_per_launch_val"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textCountryVal"
                    style="@style/val_param"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textFirstStage"
                    android:text="@string/first_stage_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textCostPerLaunch"
                    style="@style/stage_name" />

                <include
                    android:id="@+id/includedFirstStage"
                    layout="@layout/stage_info_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textFirstStage" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textSecondStage"
                    android:text="@string/second_stage_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/includedFirstStage"
                    style="@style/stage_name"/>

                <include
                    android:id="@+id/includedSecondStage"
                    layout="@layout/stage_info_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textSecondStage" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonViewLaunch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_elem"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="20dp"
                    android:text="Посмотреть запуски"
                    android:textAlignment="center"
                    android:textColor="#E4E4E4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/includedSecondStage" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>